--- a/templates/about.html
+++ b/templates/about.html
@@ -61,16 +61,14 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim  </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <h3>Formal Education</h3>
+                  <p>I earned my Assicate of Applied Science in Information Technology from Arkansas Tech University in the summer of 2022 and will be graduating with my Bachelor of Science in Computer Science in 2023</p>
+                  <h3>Extracurricular Education</h3>
+                  <p>I've spent much of my time outside of class learning different programming languages and techniques. 
+                    I have completed an extra course in C++ from codesdope.com, and have earned certificates of completion for "Complete Python Developer in 2023: Zero to Mastery" and "Complete Machine Learning & Data Science Bootcamp 2023" through udemy.com
+                  <h3>Projects</h3>
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                  Apart from the small projects demonstrated on this website, I am also currently working on a large piece of software for a local business as part of my capstone class, learning java, and further developing my understanding of machine learning. I hope to use everything I've learned and will learn to propel me forward and make me a well rounded developer. </p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./static/assets/images/profil.jpg" class="img-responsive" alt="">
