update js works

--- a/templates/works.html
+++ b/templates/works.html
@@ -75,9 +75,9 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>JavaScript</h3>
+                        <p>A collection of small web applications built with JavaScript</p>
+                        <a href="./workjs.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
