--- a/templates/workjs.html
+++ b/templates/workjs.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>JavaScript</title>  
+  <title>Javascript Works</title>  
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -66,13 +66,13 @@
         <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Fringilla sit amet</h1>
+            <h1 class="h2">Javascript</h1>
           </div>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
-
+          <br>
+          <br>
           <blockquote>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-            <small class="pull-right">Irina Martin</small>
+            <p>"Javascript is the duct tape of the Internet"</p>
+            <small class="pull-right">Charlie Campbell</small>
           </blockquote>
         </div>
       </div>
@@ -82,18 +82,25 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./static/assets/images/quote_generator.jpg" class="img-responsive" alt="">
+            <p><a href="https://dgeorge94.github.io/quote-generator/" target="_blank">Quote Generator</a><a href="https://github.com/dgeorge94/quote-generator"><br> Source Code</a></p>
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./static/assets/images/infinite_scroll.jpg" class="img-responsive" alt="">
+            <p><a href="https://dgeorge94.github.io/infinity-scroll/" target="_blank">Infinite Scroll</a><a href="https://github.com/dgeorge94/infinity-scroll"><br>Source Code</a></p>
           </div>
         </div>
       </div>
 
       <div class="col-xs-12">
-        <img src="./static/assets/images/work001-04.jpg" class="img-responsive" alt="">
+        <img src="./static/assets/images/pip.jpg" class="img-responsive" alt="">
+        <p><a href="https://dgeorge94.github.io/picture-in-picture/" target="_blank">Picture-in-Picture</a><a href="https://github.com/dgeorge94/picture-in-picture"><br>Source Code</a></p>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <img src="./static/assets/images/form_validator.jpg" class="img-responsive" alt="">
+          <p><a href="https://dgeorge94.github.io/infinity-scroll/" target="_blank">Client-side Form Validator</a><a href="https://github.com/dgeorge94/form_validator"><br>Source Code</a></p>
+        </div>
       </div>
 
     </div>
