--- a/templates/about.html
+++ b/templates/about.html
@@ -62,15 +62,14 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <h3>Formal Education</h3>
-                  <p>I earned my Assicate of Applied Science in Information Technology from Arkansas Tech University in the summer of 2022 and will be graduating with my Bachelor of Science in Computer Science in 2023</p>
+                  <p>I earned my Assiocate of Applied Science in Information Technology from Arkansas Tech University in the summer of 2022 and will be graduating with my Bachelor of Science in Computer Science in May 2023.</p>
                   <h3>Extracurricular Education</h3>
                   <p>I've spent much of my time outside of class learning different programming languages and techniques. 
-                    I have completed an extra course in C++ from codesdope.com, and have earned certificates of completion for "Complete Python Developer in 2023: Zero to Mastery" and "Complete Machine Learning & Data Science Bootcamp 2023" through udemy.com
+                    I have completed an extra course in C++ from codesdope.com, and have earned certificates of completion for Python, Machine Learning, and the MEAN stack through udemy.com.
                   <h3>Projects</h3>
                   <p>
-                  Apart from the small projects demonstrated on this website, I am also currently working on a large piece of software for a local business as part of my capstone class, learning java, and further developing my understanding of machine learning. I hope to use everything I've learned and will learn to propel me forward and make me a well rounded developer. </p>
+                  Apart from the small projects demonstrated on this website, I am also currently working on a complete rework of the University's Human Resources software as part of my capstone class, learning java, and further developing my understanding of machine learning. I hope to use everything I've learned and will learn to propel me forward and make me a well rounded developer. </p>
                 </div>
-              
               </div>
             </div>
           </div>
