add angular works

--- a/templates/works.html
+++ b/templates/works.html
@@ -57,7 +57,8 @@
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
           <h1 class="h2">02 : Works</h1>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+          <p>I've built a number of small projects in JavaScript, Python, and most recently an Angular, full MEAN stack application. I have found through this work that I really enjoy front-end User Interface Development. <br>
+          More projects will be added as I complete them in my time outside of school, so feel free to check back periodically to see what I've added the list!</p>
         </div>
       </div>
 
@@ -74,7 +75,7 @@
                         <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>001/006</h4>
+                        <h4>001/003</h4>
                         <h3>JavaScript</h3>
                         <p>A collection of small web applications built with JavaScript</p>
                         <a href="./workjs.html" title="" class="btn btn-default">Discover</a>
@@ -85,10 +86,10 @@
                         <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>002/006</h4>
-                        <h3>Nulla scelerisque</h3>
-                        <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h4>002/003</h4>
+                        <h3>Python</h3>
+                        <p>A collection of small applications built with Python</p>
+                        <a href="./workspython.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -96,10 +97,10 @@
                         <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>003/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h4>003/003</h4>
+                        <h3>Angular</h3>
+                        <p>A collection of web applications developed with the MEAN stack</p>
+                        <a href="./worksangular.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
@@ -113,36 +114,9 @@
                     <a href="./work.html" class="black-image-project-hover">
                       <img src="./static/assets/images/work02-hover.jpg" alt="Image" class="img-responsive">
                     </a>
-                    <div class="card-container">
-                      <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                      <a href="./work.html" class="btn btn-default">Discover</a>
-                    </div>
-                  </div>
-                   <div class="col-sm-4">
-                      <a href="./work.html" class="black-image-project-hover">
-                        <img src="./static/assets/images/work01-hover.jpg" alt="Image" class="img-responsive">
-                      </a>
-                      <div class="card-container">
-                        <h4>005/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                        <a href="./work.html" class="btn btn-default">Discover</a>
-                      </div>
-                    </div>
                     
-                    <div class="col-sm-4">
-                      <a href="./work.html" class="black-image-project-hover">
-                        <img src="./static/assets/images/work03-hover.jpg" alt="Image" class="img-responsive">
-                      </a>
-                      <div class="card-container">
-                        <h4>006/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./work.html" class="btn btn-default">Discover</a>
-                      </div>
-                    </div>
+                    
+                    
                     
                 </div>
                 <!--/row-->
