--- a/templates/worksangular.html
+++ b/templates/worksangular.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Javascript Works</title>  
+  <title>Angular Works</title>  
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -48,7 +48,7 @@
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
             <li><a href="./workjs.html" title="" class="active">JavaScript</a></li>
             <li><a href="./workspython.html" title="">Python</a></li>
-            <li><a href="./worksangular.html" title="">AngularJS</a></li>
+            <li><a href="./worksangular.html" title="">Angular</a></li>
           </ul>
 
 
@@ -60,45 +60,31 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
+        <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">Javascript</h1>
+            <h1 class="h2">Angular Framework</h1>
           </div>
           <br>
           <br>
           <blockquote>
-            <p>"Javascript is the duct tape of the Internet"</p>
-            <small class="pull-right">Charlie Campbell</small>
+            <p>"Achieving high levels of consistency means that it's far easier for new developers to puck up and understand the struckure of an app..."</p>
+            <small class="pull-right">Franciszek Stodulski</small>
           </blockquote>
         </div>
       </div>
 
       
       
-      <div class="col-md-8 col-md-offset-2 section-container-spacer">
-        <div class="row">
-          <div class="col-xs-12 col-md-6">
-            <img src="./static/assets/images/quote_generator.jpg" class="img-responsive" alt="">
-            <p><a href="https://dgeorge94.github.io/quote-generator/" target="_blank">Quote Generator</a><a href="https://github.com/dgeorge94/quote-generator"><br> Source Code</a></p>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <img src="./static/assets/images/infinite_scroll.jpg" class="img-responsive" alt="">
-            <p><a href="https://dgeorge94.github.io/infinity-scroll/" target="_blank">Infinite Scroll</a><a href="https://github.com/dgeorge94/infinity-scroll"><br>Source Code</a></p>
-          </div>
-        </div>
-      </div>
+      
 
       <div class="col-xs-12">
-        <img src="./static/assets/images/pip.jpg" class="img-responsive" alt="">
-        <p><a href="https://dgeorge94.github.io/picture-in-picture/" target="_blank">Picture-in-Picture</a><a href="https://github.com/dgeorge94/picture-in-picture"><br>Source Code</a></p>
+        <img src="./static/assets/images/mean-stack-posts.jpg" class="img-responsive" alt="">
+        <p><a href="https://mean-stack-social-posts.herokuapp.com/" target="_blank">Mock Social Media App</a>
+        <p><h4>Please feel free to create an account and test the functionality, but please use dummy credentials, as this app is not 100% secure.</h4></p>
+        <a href="https://github.com/dgeorge94/MEAN-stack-social-posts"><br> Source Code</a></p>
       </div>
-      <div class="row">
-        <div class="col-xs-12 col-md-6">
-          <img src="./static/assets/images/form_validator.jpg" class="img-responsive" alt="">
-          <p><a href="https://dgeorge94.github.io/infinity-scroll/" target="_blank">Client-side Form Validator</a><a href="https://github.com/dgeorge94/form_validator"><br>Source Code</a></p>
-        </div>
-      </div>
+      
 
     </div>
   </div>
