--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,7 @@
                   <span>Experienced in Python</span>
                   <span>Javascript</span>
                   <span>C++</span>
+                  <span>Angular</span>
                 </span>
                 <span id="typed"></span>
               </h1>
