--- a/templates/worksangular.html
+++ b/templates/worksangular.html
@@ -68,7 +68,7 @@
           <br>
           <br>
           <blockquote>
-            <p>"Achieving high levels of consistency means that it's far easier for new developers to puck up and understand the struckure of an app..."</p>
+            <p>"Achieving high levels of consistency means that it's far easier for new developers to pick up and understand the struckure of an app..."</p>
             <small class="pull-right">Franciszek Stodulski</small>
           </blockquote>
         </div>
