--- a/templates/contact.html
+++ b/templates/contact.html
@@ -59,17 +59,17 @@
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-               <form action="submit_form" method="post" class="reveal-content">
+               <form action="submit_form https://formsubmit.co/dalton.george7@outlook.com" method="post" class="reveal-content">
                   <div class="row">
                     <div class="col-md-7">
                       <div class="form-group">
-                        <input name="email" type="email" class="form-control" id="email" placeholder="Email">
+                        <input name="email" type="email" class="form-control" id="email" placeholder="Email" required>
                       </div>
                       <div class="form-group">
-                        <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject">
+                        <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject" required>
                       </div>
                       <div class="form-group">
-                        <textarea name="message" class="form-control" rows="5" placeholder="Enter your message"></textarea>
+                        <textarea name="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
                       </div>
                       <button type="submit" class="btn btn-default btn-lg">Send</button>
                     </div>
