--- a/templates/contact.html
+++ b/templates/contact.html
@@ -59,7 +59,7 @@
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-               <form action="submit_form https://formsubmit.co/dalton.george7@outlook.com" method="post" class="reveal-content">
+               <form action="https://formsubmit.co/dalton.george7@outlook.com" method="post" class="reveal-content">
                   <div class="row">
                     <div class="col-md-7">
                       <div class="form-group">
