update angular works

--- a/templates/worksangular.html
+++ b/templates/worksangular.html
@@ -60,7 +60,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
+        <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">Angular Framework</h1>
@@ -68,7 +68,7 @@
           <br>
           <br>
           <blockquote>
-            <p>"Achieving high levels of consistency means that it's far easier for new developers to pick up and understand the struckure of an app..."</p>
+            <p>"Achieving high levels of consistency means that it's far easier for new developers to pick up and understand the structure of an app..."</p>
             <small class="pull-right">Franciszek Stodulski</small>
           </blockquote>
         </div>
@@ -85,6 +85,21 @@
         <a href="https://github.com/dgeorge94/MEAN-stack-social-posts"><br> Source Code</a></p>
       </div>
       
+      <div class="col-md-8 col-md-offset-2 section-container-spacer">
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+            <img src="./static/assets/images/hr_login.jpg" class="img-responsive" alt="">
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <img src="./static/assets/images/hr_search.jpg" class="img-responsive" alt="">
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <img src="./static/assets/images/hr_employee_info" class="img-responsive" alt="">
+            <p><h4>User Interface design for the University's new Human Resources application</h4></p>
+            <p><a href="https://github.com/dgeorge94/hr-web-app-new"><br>Source Code</a></p>
+          </div>
+        </div>
+      </div>
 
     </div>
   </div>
