--- a/templates/works.html
+++ b/templates/works.html
@@ -125,9 +125,9 @@
             <!--/item-->
         </div>
         <!--/carousel-inner--> 
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
+        <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
 
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a> -->
      </div>
 
 
