--- a/templates/worksangular.html
+++ b/templates/worksangular.html
@@ -85,21 +85,19 @@
         <a href="https://github.com/dgeorge94/MEAN-stack-social-posts"><br> Source Code</a></p>
       </div>
       
-      <div class="col-md-8 col-md-offset-2 section-container-spacer">
-        <div class="row">
-          <div class="col-xs-12 col-md-6">
+      
+          <div class="col-xs-12">
             <img src="./static/assets/images/hr_login.jpg" class="img-responsive" alt="">
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12">
             <img src="./static/assets/images/hr_search.jpg" class="img-responsive" alt="">
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12">
             <img src="./static/assets/images/hr_employee_info" class="img-responsive" alt="">
             <p><h4>User Interface design for the University's new Human Resources application</h4></p>
             <p><a href="https://github.com/dgeorge94/hr-web-app-new"><br>Source Code</a></p>
           </div>
-        </div>
-      </div>
+        
 
     </div>
   </div>
