update angular works

--- a/templates/worksangular.html
+++ b/templates/worksangular.html
@@ -85,7 +85,7 @@
         <a href="https://github.com/dgeorge94/MEAN-stack-social-posts"><br> Source Code</a></p>
       </div>
       
-      
+      <div>
           <div class="col-xs-12">
             <img src="./static/assets/images/hr_login.jpg" class="img-responsive" alt="">
           </div>
@@ -97,7 +97,7 @@
             <p><h4>User Interface design for the University's new Human Resources application</h4></p>
             <p><a href="https://github.com/dgeorge94/hr-web-app-new"><br>Source Code</a></p>
           </div>
-        
+        </div>
 
     </div>
   </div>
