--- a/templates/worksangular.html
+++ b/templates/worksangular.html
@@ -85,12 +85,15 @@
         <a href="https://github.com/dgeorge94/MEAN-stack-social-posts"><br> Source Code</a></p>
       </div>
       
-      
-          <div class=>
+     
+          <div class="col-xs-12">
             <img src="./static/assets/images/hr_login.jpg" class="img-responsive" alt="">
           </div>
-          <div class=>
-            <img src="./static/assets/images/hr_employee_info" class="img-responsive" alt="">
+          <div class="col-xs-12">
+            <img src="./static/assets/images/hr_search.jpg" class="img-responsive" alt="">
+          </div>
+          <div class="col-xs-12">
+            <img src="./static/assets/images/hr_employee_info.jpg" class="img-responsive" alt="">
             <p><h4>User Interface design for the University's new Human Resources application</h4></p>
             <p><a href="https://github.com/dgeorge94/hr-web-app-new"><br>Source Code</a></p>
           </div>
