update python works

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,10 +58,10 @@
                 <span id="typed-strings">
                   <span>I'm Dalton George</span>
                   <span>Aspiring Developer</span>
-                  <span>Experienced in Python</span>
+                  <span>Experienced in Angular</span>
                   <span>Javascript</span>
                   <span>C++</span>
-                  <span>Angular</span>
+                  <span>Python</span>
                 </span>
                 <span id="typed"></span>
               </h1>
