--- a/templates/workjs.html
+++ b/templates/workjs.html
@@ -47,7 +47,7 @@
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
             <li><a href="./workjs.html" title="" class="active">JavaScript</a></li>
             <li><a href="./workspython.html" title="">Python</a></li>
-            <li><a href="./worksangular.html" title="">AngularJS</a></li>
+            <li><a href="./worksangular.html" title="">Angular</a></li>
           </ul>
 
 
