--- a/templates/works.html
+++ b/templates/works.html
@@ -99,7 +99,7 @@
                       <div class="card-container card-container-lg">
                         <h4>003/003</h4>
                         <h3>Angular</h3>
-                        <p>A collection of web applications developed with the MEAN stack</p>
+                        <p>A collection of web applications developed using the MEAN stack</p>
                         <a href="./worksangular.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
