--- a/templates/workspython.html
+++ b/templates/workspython.html
@@ -78,6 +78,11 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
+            <img src="./static/assets/images/quicksort1.jpg" class="img-responsive" alt="">
+            <img src="./static/assets/images/quicksort2.jpg" class="img-responsive" alt="">
+            <p>Quicksort Algorithm <a href="https://github.com/dgeorge94/quicksort/blob/main/PycharmProjects/pythonProject/quicksort/quicksort.py">Source Code</a></p>
+          </div>
+          <div class="col-xs-12 col-md-6">
             <img src="./static/assets/images/email_script.jpg" class="img-responsive" alt="">
             <p>Simple Email Sending Script</p>
           </div>
