adjust order/spacing

--- a/templates/workspython.html
+++ b/templates/workspython.html
@@ -46,8 +46,8 @@
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
             <li><a href="./workjs.html" title="" class="active">JavaScript</a></li>
-            <li><a href="./workspython.html" title="">Python</a></li>
             <li><a href="./worksangular.html" title="">Angular</a></li>
+            <li><a href="./workspython.html" title="">Python</a></li>
           </ul>
 
 
@@ -77,6 +77,9 @@
       
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
+          <div class="col-xs-12 col-md-6">
+            <img src="./static/assets/images/quicksort1.jpg" class="img-responsive" alt="">
+          </div>
           <div class="col-xs-12 col-md-6">
             <img src="./static/assets/images/quicksort1.jpg" class="img-responsive" alt="">
             <img src="./static/assets/images/quicksort2.jpg" class="img-responsive" alt="">
