--- a/templates/worksangular.html
+++ b/templates/worksangular.html
@@ -98,6 +98,9 @@
             <p><a href="https://github.com/dgeorge94/hr-web-app-new"><br>Source Code</a></p>
           </div>
         
+          <div>
+            <p><h3>I am currently building a Bug Tracker using the MEAN stack. Check back for updates!</h3></p>
+          </div>
 
     </div>
   </div>
