remove HTML mistake

--- a/templates/worksangular.html
+++ b/templates/worksangular.html
@@ -81,7 +81,7 @@
         <img src="./static/assets/images/mean-stack-posts.jpg" class="img-responsive" alt="">
         <p><a href="https://mean-stack-social-posts.herokuapp.com/" target="_blank">Mock Social Media App</a>
         <p><h4>Please feel free to create an account and test the functionality, but please use dummy credentials, as this app is not 100% secure.</h4></p>
-        <p>><h5>(Heroku web hosting only saves images for a short amount of time, so posting one of your own will show the full functionality.)</h5></p>
+        <p><h5>(Heroku web hosting only saves images for a short amount of time, so posting one of your own will show the full functionality.)</h5></p>
         <a href="https://github.com/dgeorge94/MEAN-stack-social-posts"><br> Source Code</a></p>
       </div>
       
