--- a/templates/workjs.html
+++ b/templates/workjs.html
@@ -95,7 +95,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-6">
           <img src="./static/assets/images/form_validator.jpg" class="img-responsive" alt="">
-          <p><a href="https://dgeorge94.github.io/infinity-scroll/" target="_blank">Client-side Form Validator</a><a href="https://github.com/dgeorge94/form_validator"><br>Source Code</a></p>
+          <p><a href="https://dgeorge94.github.io/form_validator/" target="_blank">Client-side Form Validator</a><a href="https://github.com/dgeorge94/form_validator"><br>Source Code</a></p>
         </div>
       </div>
 
